# bowit_ws

./: .devcontainer.json  .gitignore  Dockerfile  docker-compose.yml  rviz.run
src/bowit/: CMakeLists.txt  package.xml
src/bowit/cmake/: FindFCL.cmake  Findlimbo.cmake
src/bowit/config/: bowit.rviz  bowitviz_param.yaml  robot1_param.yaml  robot2_param.yaml  robot3_param.yaml  robot4_param.yaml
src/bowit/config/data/: temp.csv
src/bowit/launch/: bowit.launch.py
src/bowit/src/: bowit_node.cpp  viz_node.cpp
src/bowit/src/kdtree/: kdtree.cpp  kdtree.h
src/bowit/src/libbow/: bowit_params.h  bowit_robot.cpp  bowit_robot.h  bowit_ros_interface.cpp  bowit_ros_interface.h  collision_checker.h  data_compression.cpp  data_compression.h  dataloader.h  hypermap.h  motion_model.h
src/bowit/src/viz_interface/: bowit_viz.cpp  bowit_viz.h
